<resources>
    <string name="app_name">PositionMe</string>

    <!-- Buttons -->
    <string name="done">Done</string>
    <string name="stop">Complete</string>
    <string name="start">Start</string>
    <string name="measurements">Live data</string>
    <string name="files">History</string>
    <string name="info_description">See sensor hardware information</string>
    <string name="refresh_read">Refresh readings</string>
    <string name="download">Download</string>
    <string name="grant">Grant permissions</string>
    <string name="exit">Exit application</string>
    <string name="ok">OK</string>
    <string name="show_storage">Show locally</string>
    <string name="setLocation">Set</string>
    <string name="cancel">Cancel</string>

    <!-- Sensors -->
    <string name="accelerometer">Accelerometer</string>
    <string name="gravity">Gravity</string>
    <string name="magnetic">Magnetic field</string>
    <string name="gyro">Gyroscope</string>
    <string name="light">Light sensor</string>
    <string name="pressure">Pressure sensor</string>
    <string name="proximity">Proximity sensor</string>
    <string name="gnssLatLong">GNSS (Lat/Long)</string>
    <string name="gnss">GNSS</string>
    <string name="pdr_pos">PDR Position</string>
    <string name="pdr">Pedestrian Dead Reckoning</string>
    <string name="wifi">WiFi Networks</string>
    <string name="bluetooth">Bluetooth Devices</string>

    <!-- Network -->
    <string name="errorCodeNoServerResponse">000</string>
    <string name="errorMessageNoServerResponse">Server unavailable or unreachable</string>

    <!-- Misc -->
    <string name="x">X: %1s</string>
    <string name="y">Y: %1s</string>
    <string name="z">Z: %1s</string>
    <string name="level">Level: %1s</string>
    <string name="lati">Lat: %1s</string>
    <string name="longi">Long: %1s</string>
    <string name="position">PDR Position</string>
    <string name="id">ID</string>
    <string name="datetime">Date&amp;Time</string>
    <string name="elevation">Elevation: %1s</string>
    <string name="averageStepLgn">Computed Avg. Step Length</string>
    <string name="correctStepLgn">unit: cm</string>
    <string name="locationWaiting">Waiting for starting location... (GNSS or Wi-Fi)</string>
    <string name="correctionInstructions">Zoom, scroll and rotate the map \n to correct the path</string>

    <!-- Sensor Info -->
    <string name="vendor">Vendor:\t\t\t\t\t\t\t %1$s</string>
    <string name="resolution">Resolution:\t\t %1$s</string>
    <string name="power">Power:\t\t\t\t\t\t\t\t %1$s</string>
    <string name="version">Version:\t\t\t\t\t\t %1$s</string>
    <string name="mac">MAC: %1$s</string>
    <string name="name">Name: %1$s</string>
    <string name="unknown">Unknown</string>

    <!-- Preference Titles -->
    <string name="settings_title">Settings</string>
    <string name="sensor_header">Sensors</string>
    <string name="sync_header">Sync</string>
    <string name="user_header">User information</string>
    <string name="constants_header">Constants</string>
    <string name="fusion_constants_header">Fusion Constants</string>

    <!-- Content Descriptions -->
    <string name="recording">Recording in progress</string>
    <string name="distance_travelled">Distance travelled:</string>
    <string name="uploadTitle">Manual upload</string>
    <string name="emptyUploadTitle">No trajectories to upload</string>

    <!-- Units only -->
    <string name="meter">%1$s m</string>
    <string name="db">%1$s dB</string>

    <!-- Sync Preferences -->
    <string name="time_title">Sync frequency</string>
    <string name="split_trajectory_title">Automatically split records</string>
    <string name="split_trajectory_summary_off">Trajectories are saved start to finish</string>
    <string name="split_trajectory_summary_on">Trajectories are split based on slider</string>
    <string name="split_trajectory_slider_title">Max number of minutes per recording</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- User data Preferences -->
    <string name="manual_steps_title">Use manual stride length</string>
    <string name="manual_steps_summary_off">The app will estimate stride length from the accelerometer readings</string>
    <string name="manual_steps_summary_on">The app will use the values provided below</string>
    <string name="height_title">User height (cm)</string>
    <string name="step_title">Step length (cm)</string>
    <!-- Constants Preferences -->
    <string name="constants_enable_title">Edit the constants used</string>
    <string name="constants_summary_off">The app will use the default constants</string>
    <string name="constants_summary_on">The app will use the values provided below</string>
    <string name="weiberg_K_title">Weiberg K</string>
    <string name="weiberg_K">K used in the Weiberg stride length estimation</string>
    <string name="alpha_pressure_title">Barometer Sensitivity (%)</string>
    <string name="alpha_pressure">Adjust the barometer sensitivity during recordings</string>
    <string name="particle_count_title">Particle Count</string>
    <string name="particle_count">The number of particles used for indoor mapping with Particle Fusion</string>
    <string name="fusion_observation_count_title">Observations Count (Fusion)</string>
    <string name="fusion_observation_count">The number of stored observations used in the particle fusion algorithm</string>
    <string name="elevation_seconds_title">Elevation seconds</string>
    <string name="elevation_seconds">Number of samples in the elevation buffer</string>
    <string name="accel_samples">Number of samples in the vertical/horizontal movement buffer</string>
    <string name="accel_samples_title">Accelerometer Samples</string>
    <string name="movement_epsilon_title">\u03B5</string>
    <string name="movement_epsilon">Minimum accelerometer magnitude for movement</string>
    <string name="filter_coefficient">Coefficient for fusing gyro-based and magnetometer-based orientation. [0,1]</string>
    <string name="filter_coefficient_title">Orientation filter coefficient</string>
    <string name="wifi_scan_interval">Scan interval for wifi networks. A scan takes approximately two seconds.</string>
    <string name="wifi_scan_title">WiFi interval</string>
    <!--  Fusion Constants  -->
    <string name="resampling_variance_title">Resampling Variance (%)</string>
    <string name="resampling_variance">Adjust the spread of particles during repopulation events</string>
    <string name="particle_threshold_title">Particle Threshold (%)</string>
    <string name="particle_threshold">The maximum weight a single particle can have before repopulation.</string>
    <!-- Kalman Filter Constants -->
    <string name="kalman_section_title">Kalman Filter Settings</string>
    <string name="kalman_constants_enable_title">Adjust the Kalman filter</string>
    <string name="kalman_constants_summary_off">The app will use the default constants</string>
    <string name="kalman_constants_summary_on">The app will use the values provided below</string>
    <string name="kalman_noise_title">Orientation Measurement Noise</string>
    <string name="kalman_noise">Uncertainty of the PDR orientation measurement. Larger values correspond to less trust in the PDR value.</string>
    <string name="kalman_pred_noise_title">Kalman Filter Predicted Noise</string>
    <string name="kalman_pred_noise">Influence of process noise of Kalman filter orientation predictions. Larger values correspond to less trust in the gyroscope predictions.</string>
    <string name="kalman_noise_bias_title">Orientation Bias Noise</string>
    <string name="kalman_noise_bias">Gyroscope drift. Larger values correspond to faster expected gyroscope drift.</string>
    <!-- Mobile data Preferences -->
    <string name="mobile_data_title">Sync using mobile data</string>
    <string name="mobile_data_summary_off">The app will only send data through a WiFi connection</string>
    <string name="mobile_data_summary_on">The app will send data over mobile or WiFi connections</string>
    <!-- Building defaults -->
    <string name="building_def_title">Default building assumptions</string>
    <string name="floor_height">Floor height in meters</string>
    <string name="color">Colour</string>
    <string name="trajMapSettings">Map Settings</string>
    <string name="autoPanSwitch">🔭 Autopan</string>
    <string name="gnssSwitch">🛰 GNSS</string>
    <string name="pdrSwitch">🥾 PDR</string>
    <string name="wifiAPSSwitch">🛜 Wi-Fi</string>
    <string name="recordedPathSwitch">🎥 Recorded Path</string>
    <string name="floor_down_button">Floor Down button</string>
    <string name="floor_up_button">Floor Up button</string>
    <string name="choose_map">Choose Map</string>
    <string name="auto_floor">❇️ Auto Floor </string>
    <string name="show_particles">Show Particles (Fusion)</string>
    <string name="gnss_error">GNSS error:</string>
    <string name="satellite">Satellite</string>
    <string name="normal">Normal</string>
    <string name="hybrid">Hybrid</string>
    <string name="delete_button">Delete</string>
    <string name="home_slogan">\"Coordinates Start with Your First Move\"</string>
    <string name="info">Sensor Info</string>
    <string name="fragment_home_slogan">\"Coordinates Start with Your First Move\"</string>
    <string name="start_recording">Record</string>
    <string name="floor_up">Floor up button</string>
    <string name="floor_down">Floor down button</string>
    <string name="red_dot_description_text">Recording In Progress</string>
    <string name="correct_your_step">Correct your own avg step length:</string>
    <string name="correct_step_hint">...</string>
    <string name="path_drawing_descritpion">Path drawing</string>
    <string name="position_me">Position Me</string>
    <string name="gnss_disabled">GNSS is disabled</string>
    <string name="replay_frag_restart">Restart</string>
    <string name="replay_frag_play">Play</string>
    <string name="replay_frag_end">End</string>
    <string name="replay_frag_exit">Exit</string>
    <string name="button_repo">Open-Source Code on GitHub</string>
    <string name="url_repo">https://github.com/openpositioning/PositionMe/</string>
    <string name="text_map_type">Map Type</string>
    <string name="drop_marker">Drop Marker</string>
    <!--  Debug Mode  -->
    <string name="debug_mode_title">Developer Mode</string>
    <string name="debug_mode_enabled">Developer mode is enabled. You can manually set your PDR start location, and change floor anywhere.</string>
    <string name="debug_mode_disabled">Developer mode is not enabled.</string>

</resources>