<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ReplayMap"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MapsFragment">
    <!-- 地图 Fragment 容器 -->
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>



    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.RecordingFragment">
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/RecordingMap"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MapsActivity" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="ExtraText">

            <Switch
                android:id="@+id/autoFloor"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="292dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_corner_pastel_blue"
                android:buttonTint="@android:color/holo_green_dark"
                android:text="@string/auto_floor"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mapSwitchSpinner" />

            <androidx.cardview.widget.CardView
                android:id="@+id/currentPositionCard"
                android:layout_width="411dp"
                android:layout_height="60dp"
                android:layout_marginTop="2dp"
                app:cardBackgroundColor="@color/pastelBlue"
                app:cardCornerRadius="20dp"
                app:cardElevation="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="357dp"
                    android:layout_height="81dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="52dp"
                    app:layout_constraintEnd_toEndOf="@+id/currentPositionCard"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/currentElevation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="2dp"
                        android:text="@string/elevation"
                        android:textColor="@color/LightYellow"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/currentDistanceTraveled"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/meter"
                        android:textColor="@color/LightYellow"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/distanceTravelledTitle"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/distanceTravelledTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/distance_travelled"
                        android:textColor="@color/LightYellow"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.05"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/currentElevation" />

                    <TextView
                        android:id="@+id/gnssError"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="28dp"
                        android:text="@string/gnss_error"
                        android:textColor="@color/LightYellow"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/currentDistanceTraveled"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toEndOf="@+id/currentElevation" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/redDot"
                    android:layout_width="48dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="350dp"
                    android:layout_marginTop="6dp"
                    android:contentDescription="@string/recording"
                    android:src="@drawable/ic_baseline_red_dot_24" />


            </androidx.cardview.widget.CardView>


            <Spinner
                android:id="@+id/mapSwitchSpinner"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="68dp"
                android:background="@color/white"
                android:spinnerMode="dropdown"
                android:text="@string/choose_map"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floorUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:clickable="true"
                android:contentDescription="@string/floor_up_button"
                android:src="@android:drawable/arrow_up_float"
                app:layout_constraintBottom_toTopOf="@+id/floorDownButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.954"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floorDownButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="296dp"
                android:clickable="true"
                android:contentDescription="@string/floor_down_button"
                android:src="@android:drawable/arrow_down_float"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.954"
                app:layout_constraintStart_toStartOf="parent" />

            <Switch
                android:id="@+id/gnssSwitch"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_corner_pastel_blue"
                android:buttonTint="@android:color/holo_green_dark"
                android:text="@string/gnssSwitch"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mapSwitchSpinner" />

            <Button
                android:id="@+id/lineColorButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="244dp"
                android:layout_marginTop="2dp"
                android:text="@string/color"
                android:background="@drawable/rounded_button_black"
                android:backgroundTint="@color/black"
                app:layout_constraintStart_toEndOf="@+id/mapSwitchSpinner"
                app:layout_constraintTop_toBottomOf="@+id/currentPositionCard" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/map_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/play_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Play" />

            <Button
                android:id="@+id/pause_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pause"/>

            <Button
                android:id="@+id/exit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Exit"/>

            <Button
                android:id="@+id/restart_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Restart"/>

            <Button
                android:id="@+id/go_to_end_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Go to End"/>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleHorizontal"/>
    </LinearLayout>

</FrameLayout>